<resources>
    <string name="app_name">RxSubscriptions</string>

    <string name="explanation">Open the following Activities, then come back to here. If you look in a memory
        tool, you\'ll see that sometimes the amount of memory goes up - the Activity leaked!</string>

    <string name="explanation_leak">This activity should leak when you go back.</string>
    <string name="leaking_subscription">Leaking Subscription</string>
    <string name="leaking_subscription_fixed">Leaking Subscription (Fixed)</string>

    <string name="temp_leaking_subscription">Leaking (Temporary)</string>
    <string name="temp_leaking_subscription_fixed">Leaking (Temporary but fixed)</string>
    <string name="explanation_leak_temp">This activity should leak when you go back, but eventually release.</string>

    <string name="bind_activity_leak">BindActivity (with leak)</string>
    <string name="bind_activity_no_leak">BindActivity (without leak)</string>
    <string name="explanation_bind_leak">This activity should leak when you go back, even though it used
        bindActivity.</string>
    <string name="explanation_bind_no_leak">This activity should leak when you go back, even though it used
        bindActivity.</string>

    <string name="lifecycle_observable">LifecycleObservable</string>
    <string name="explanation_lifecycle">This activity should always auto-unsubscribe due to
        LifecycleObservable.bindActivityLifecycle().</string>

    <string name="never_leaks">Never Leaks</string>
    <string name="explanation_never">This activity feels like it ought to leak, but it does not.</string>
</resources>
