<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/explanation" />

        <Button
            android:id="@+id/leaking_subscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leaking_subscription" />

        <Button
            android:id="@+id/leaking_subscription_fixed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leaking_subscription_fixed" />

        <Button
            android:id="@+id/temp_leaking_subscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_leaking_subscription" />

        <Button
            android:id="@+id/temp_leaking_subscription_fixed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_leaking_subscription_fixed" />

    </LinearLayout>
</ScrollView>
